--- a/src/tpl/components/box/audio/audio.twig
+++ b/src/tpl/components/box/audio/audio.twig
@@ -16,6 +16,11 @@
         <div class="divider">/</div>
         <div class="length"></div>
         </div>
+        <div class="playing">
+          <span class="playing__bar playing__bar1"></span>
+          <span class="playing__bar playing__bar2"></span>
+          <span class="playing__bar playing__bar3"></span>
+        </div>
     </div>
     <div class="volume-container">
       <div class="volume-button">
