--- a/src/css/core/objects/_animations.scss
+++ b/src/css/core/objects/_animations.scss
@@ -14,6 +14,13 @@
 		transform: scale(1.2);
 	}
 }
+@keyframes tilt-shaking {
+	0% { transform: rotate(0deg); }
+	25% { transform: rotate(5deg); }
+	50% { transform: rotate(0eg); }
+	75% { transform: rotate(-5deg); }
+	100% { transform: rotate(0deg); }
+  }
 @keyframes neon {
 	0% {
 	  filter: drop-shadow(0px 0px 1px #fff) drop-shadow(0px 0px 3px #fff)
@@ -24,5 +31,26 @@
 	  filter: drop-shadow(0px 0px 1px #fff) drop-shadow(0px 0px 6px #fff)
 		drop-shadow(0px 0px 15px #64c294d9) drop-shadow(0px 0px 30px #64c294d9)
 		drop-shadow(0px 0px 40px #64c294d9);
+	}
+}
+@keyframes music {
+	10% {
+	  height: 30%;
+	}
+	
+	30% {
+	  height: 100%;
+	}
+	
+	60% {
+	  height: 50%;
+	}
+	
+	80% {
+	  height: 75%;
+	}
+	
+	100% {
+	  height: 60%;
 	}
   }
