parallax setup, fixed links, edited hero images

--- a/src/css/base/_typography.scss
+++ b/src/css/base/_typography.scss
@@ -25,14 +25,14 @@ h6,
 	line-height: 1.2;
 	letter-spacing: 0.02em;
 }
-h1,
-.h1,
-h2,
-.h2,
-h3,
-.h3 {
-	//text-transform: uppercase;
-}
+// h1,
+// .h1,
+// h2,
+// .h2,
+// h3,
+// .h3 {
+// 	text-transform: uppercase;
+// }
 h1,
 .h1 {
 	font-size: 35px;
