--- a/src/css/core/objects/_section.scss
+++ b/src/css/core/objects/_section.scss
@@ -10,6 +10,7 @@
 		margin-bottom: 60px;
 	}
 	&--bg {
+	position: unset;
     background-image: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.8)),
     url($imgPath + '/illust/bg/publikum.jpg');
 	background-repeat: no-repeat;
