--- a/src/tpl/components/box/hero/hero.twig
+++ b/src/tpl/components/box/hero/hero.twig
@@ -12,7 +12,7 @@
     <div class="hero__content">
         <h1 class="hero__title">Dozvuky Léta 2023</h1>
         <h4 class="hero__annot">{{ props.annot }}</h4>
-        <a href="#tickets" class="btn-glitch" role="button"><span class="btn-glitch__text">Chci lístek {% include "@components/core/icon-svg/icon-svg.twig" with {props: { name: "ticket" }} %}</span></a>
+        <a href="#listky" class="btn-glitch" role="button"><span class="btn-glitch__text">Chci lístek {% include "@components/core/icon-svg/icon-svg.twig" with {props: { name: "ticket" }} %}</span></a>
     </div>
     <div class="hero__timeline" style="--slide-duration: {{timeIntervalCss}}s;">
     </div>
