--- a/src/tpl/components/core/footer/footer.twig
+++ b/src/tpl/components/core/footer/footer.twig
@@ -1,6 +1,6 @@
 <footer class="footer">
     <div class="container">
-        <div class="footer__contacts">
+        <div class="footer__contacts" id="kontakty">
             {% include "@components/core/title/title.twig" with { props: {
                 title: "Kontakty",
                 tag: "h3",
