header changes, audio visual changes, footer bg change

--- a/src/tpl/components/core/footer/footer.twig
+++ b/src/tpl/components/core/footer/footer.twig
@@ -52,6 +52,7 @@
             <a target="_blank" href="https://www.instagram.com/dozvuky_leta/" class="footer__social-link">{% include "@components/core/icon-svg/icon-svg.twig" with {props: { name: "instagram" }} %}</a>
             <a target="_blank" href="#" class="footer__social-link">{% include "@components/core/icon-svg/icon-svg.twig" with {props: { name: "twitter" }} %}</a>
         </div>
-        <div class="footer__copyright">&#169 Petr Foldyna, 2023. IČO: 467 798 632, mail: petr.foldyna12@gmail.com tel: +420 606 767 826</div>
+        {# <div class="footer__copyright">&#169 Petr Foldyna, 2023. IČO: 467 798 632, mail: petr.foldyna12@gmail.com tel: +420 606 767 826</div> #}
+        <div class="footer__copyright">&#169 Pro Vás od Nás 2023</div>
     </div>
 </footer>
