--- a/src/tpl/layout/layout.twig
+++ b/src/tpl/layout/layout.twig
@@ -86,7 +86,7 @@
 	<body>
 		<div class="wrapper">
 			{% include "@components/core/header/header.twig" with { props: {
-				logo: "Logo-1.png",
+				logo: "logo-test.png",
 				items: [
 					{
 						title: "Kapely",
