--- a/src/css/layout/_header.scss
+++ b/src/css/layout/_header.scss
@@ -1,6 +1,7 @@
 .header {
     position: fixed;
     width: 100%;
+    height: 72px;
     margin: 0 auto;
     left: 0;
     right: 0;
@@ -30,10 +31,11 @@
         position: relative;
     }
     &__wrap {
-        padding: 15px;
+        padding: 20px;
         display: flex;
-        justify-content: space-between;
+        justify-content: flex-end;
         align-items: center;
+        height: 100%;
         background: linear-gradient(45deg,rgba(255,255,255,.07) 0%,rgba(255,255,255,0) 100%);
         background-repeat: no-repeat;
         background-attachment: fixed;
@@ -42,12 +44,14 @@
     }
     &__home {
         position: absolute;
-        left: 30px;
+        left: 15px;
         top: 20px;
     }
     &__logo {
+        position: absolute;
+        left: 20px;
         & img {
-            max-width: 60px;
+            max-width: 90px;
             border-radius: 2px
             //max-height: 40px;
         }
@@ -114,8 +118,8 @@
             height: initial;
             width: initial;
         }
-        &__wrap {
-            padding: 15px 30px;
+        &__logo {
+            left: 20px;
         }
         &__link {
             color: $colorText;
