--- a/src/tpl/Views/Gallery/Galerie-2022.twig
+++ b/src/tpl/Views/Gallery/Galerie-2022.twig
@@ -163,7 +163,7 @@
     <section class="section">
         <div class="container">
             <div class="link-back">
-                <a href="/Galerie.html" class="link-back__link">{% include "@components/core/icon-svg/icon-svg.twig" with {props: { name: "back" }} %} Zpět</a>
+                <a href="/galerie.html" class="link-back__link">{% include "@components/core/icon-svg/icon-svg.twig" with {props: { name: "back" }} %} Zpět</a>
                 <a href="/" class="link-back__link">{% include "@components/core/icon-svg/icon-svg.twig" with {props: { name: "home" }} %} Domů</a>
             </div>
         </div>
