--- a/src/tpl/Views/Kapely/375nm.twig
+++ b/src/tpl/Views/Kapely/375nm.twig
@@ -8,7 +8,7 @@
     <section class="section">
         <div class="container">
             <div class="link-back">
-                <a href="/Kapely.html" class="link-back__link">{% include "@components/core/icon-svg/icon-svg.twig" with {props: { name: "back" }} %} Zpět</a>
+                <a href="/kapely.html" class="link-back__link">{% include "@components/core/icon-svg/icon-svg.twig" with {props: { name: "back" }} %} Zpět</a>
                 <a href="/" class="link-back__link">{% include "@components/core/icon-svg/icon-svg.twig" with {props: { name: "home" }} %} Domů</a>
             </div>
         </div>
@@ -25,7 +25,7 @@
     <section class="section section--top">
         <div class="container">
             {% include "@components/core/title/title.twig" with { props: {
-                title: "Česko třebovská kapela 375 m.n.m",
+                title: "Českotřebovská kapela 375 m.n.m",
                 tag: "h2",
             }} %}
         </div>
