--- a/src/tpl/Views/Kapely/375nm.twig
+++ b/src/tpl/Views/Kapely/375nm.twig
@@ -13,7 +13,7 @@
             </div>
         </div>
     </section>
-    <section class="section section--top">
+    <section class="section">
         <div class="container">
             {% include "@components/box/main-image/main-image.twig" with { props: {
                 img: "main-image/galerie2.webp",
