--- a/src/tpl/components/box/gallery-item/gallery-item.twig
+++ b/src/tpl/components/box/gallery-item/gallery-item.twig
@@ -1,4 +1,4 @@
-<a data-fslightbox="{{ props.galleryName }}" href="{{ assets.images}}illust/{{ item.link }}" class="gallery-item">
+<a data-fslightbox="{{ props.galleryName }}" href="{{ assets.images}}illust/{{ item.img }}" class="gallery-item">
     {% include "@components/core/image/image.twig" with { item: {
         img: item.img,
         alt: item.alt,
