--- a/src/tpl/Galerie.twig
+++ b/src/tpl/Galerie.twig
@@ -27,7 +27,7 @@
             </div>
         </div>
     </section>
-    <section class="section section--top-lg section--bottom">
+    <section class="section section--bottom">
         <div class="container">
             {% include "@components/core/title/title.twig" with { props: {
                 title: "Galerie",
