--- a/src/tpl/Kapely.twig
+++ b/src/tpl/Kapely.twig
@@ -51,7 +51,7 @@
             </div>
         </div>
     </section>
-    <section class="section section--top-lg section--bottom">
+    <section class="section section--bottom">
         <div class="container">
             {% include "@components/core/title/title.twig" with { props: {
                 title: "Kapely",
