--- a/src/tpl/Kapely.twig
+++ b/src/tpl/Kapely.twig
@@ -7,7 +7,7 @@
         img: "crossroad-bands/band2.webp",
         alt: "fotografie kapely 375 m.n.m",
         title: "375 m.n.m",
-        link: "/kapely/375nm.html",
+        link: "/kapely/375mnm.html",
     },
     {
         img: "crossroad-bands/band1.webp",
@@ -46,9 +46,13 @@
 <main role="main" id="main" class="main">
     <section class="section">
         <div class="container">
-            <div class="link-back">
-                <a href="/" class="link-back__link">{% include "@components/core/icon-svg/icon-svg.twig" with {props: { name: "back" }} %} Zpět</a>
-            </div>
+            {% include "@components/box/breadcrumbs/breadcrumbs.twig" with { props: {
+                items: [
+                    {
+                        link: "kapely",
+                    }
+                ]
+            }} %}
         </div>
     </section>
     <section class="section section--bottom">
