--- a/src/tpl/Views/Gallery/Galerie-2022.twig
+++ b/src/tpl/Views/Gallery/Galerie-2022.twig
@@ -162,10 +162,17 @@
 <main role="main" id="main" class="main">
     <section class="section">
         <div class="container">
-            <div class="link-back">
-                <a href="/" class="link-back__link">{% include "@components/core/icon-svg/icon-svg.twig" with {props: { name: "home" }} %} Domů</a>
-                <a href="/galerie.html" class="link-back__link">{% include "@components/core/icon-svg/icon-svg.twig" with {props: { name: "back" }} %} Zpět</a>
-            </div>
+            {% include "@components/box/breadcrumbs/breadcrumbs.twig" with { props: {
+                items: [
+                    {
+                        link: "galerie",
+                        url: "/galerie.html",
+                    },
+                    {
+                        link: "ročník-2022",
+                    }
+                ]
+            }} %}
         </div>
     </section>
     <section class="section section--top section--bottom">
