--- a/src/tpl/index.twig
+++ b/src/tpl/index.twig
@@ -54,7 +54,7 @@
                     {
                         title: "375 m.n.m",
                         img: "carousel-band/band2.webp",
-                        link: "/kapely/375nm.html",
+                        link: "/kapely/375mnm.html",
                         description: "Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, et. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente, modi!"
                     },
                     {
