--- a/src/tpl/Galerie.twig
+++ b/src/tpl/Galerie.twig
@@ -22,9 +22,13 @@
 <main role="main" id="main" class="main">
     <section class="section">
         <div class="container">
-            <div class="link-back">
-                <a href="/" class="link-back__link">{% include "@components/core/icon-svg/icon-svg.twig" with {props: { name: "back" }} %} Zpět</a>
-            </div>
+            {% include "@components/box/breadcrumbs/breadcrumbs.twig" with { props: {
+                items: [
+                    {
+                        link: "galerie",
+                    }
+                ]
+            }} %}
         </div>
     </section>
     <section class="section section--bottom">
