spacing, color fixes

--- a/src/tpl/Kapely.twig
+++ b/src/tpl/Kapely.twig
@@ -55,7 +55,7 @@
             }} %}
         </div>
     </section>
-    <section class="section section--bottom">
+    <section class="section section--top section--bottom">
         <div class="container">
             {% include "@components/core/title/title.twig" with { props: {
                 title: "Kapely",
