--- a/src/tpl/Galerie.twig
+++ b/src/tpl/Galerie.twig
@@ -31,7 +31,7 @@
             }} %}
         </div>
     </section>
-    <section class="section section--bottom">
+    <section class="section section--top section--bottom">
         <div class="container">
             {% include "@components/core/title/title.twig" with { props: {
                 title: "Galerie",
